src/IDE/editor/parser/ASPCore2_0cParser.js
// Generated from .\ASPCore2_0c.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var ASPCore2_0cListener = require('./ASPCore2_0cListener').ASPCore2_0cListener;
var grammarFileName = "ASPCore2_0c.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map(function (ds, index) {
	return new antlr4.dfa.DFA(ds, index);
});

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [null, "'name'", "'start-block'", "'end-block'", "'rule'",
	"'block'", "'rules'", "'test'", "'scope'", "'programFiles'",
	"'input'", "'inputFiles'", "'assert'", "'noAnswerSet'",
	"'trueInAll'", "'atoms'", "'trueInAtLeast'", "'number'",
	"'trueInAtMost'", "'trueInExactly'", "'constraint'",
	"'constraintForAll'", "'constraintInAtLeast'", "'constraintInAtMost'",
	"'constraintInExactly'", "'bestModelCost'", "'cost'",
	"'level'", "'''", "'not'", "'%**'", "'**%'", null,
	null, null, null, "'_'", "'.'", "','", "'?'", "':'",
	"';'", "'|'", "':-'", "':~'", "'+'", "'-'", "'*'",
	"'/'", "'@'", "'('", "')'", "'['", "']'", "'{'", "'}'",
	"'='", null, "'<'", "'>'", "'<='", "'>='", "'#count'",
	"'#max'", "'#min'", "'#sum'", null, null, "'#'"];

var symbolicNames = [null, null, null, null, null, null, null, null, null,
	null, null, null, null, null, null, null, null, null,
	null, null, null, null, null, null, null, null, null,
	null, "SINGLE_QUOTE", "NAF", "DIRECTIVE_START", "DIRECTIVE_END",
	"ID", "VARIABLE", "STRING", "NUMBER", "ANONYMOUS_VARIABLE",
	"DOT", "COMMA", "QUERY_MARK", "COLON", "SEMICOLON",
	"OR", "CONS", "WCONS", "PLUS", "MINUS", "TIMES", "DIV",
	"AT", "PAREN_OPEN", "PAREN_CLOSE", "SQUARE_OPEN",
	"SQUARE_CLOSE", "CURLY_OPEN", "CURLY_CLOSE", "EQUAL",
	"UNEQUAL", "LESS", "GREATER", "LESS_OR_EQ", "GREATER_OR_EQ",
	"AGGREGATE_COUNT", "AGGREGATE_MAX", "AGGREGATE_MIN",
	"AGGREGATE_SUM", "MINIMIZE", "MAXIMIZE", "HASH", "BLANK",
	"MULTI_LINE_COMMENT", "LINE_COMMENT"];

var ruleNames = ["inizio", "program", "statements", "query", "statement",
	"statementsForTest", "entireBlockTest", "nameEqual",
	"listOfString", "startBlock", "endBlock", "statementForTest",
	"testDirective", "inLineAnnotation", "ruleTest", "blockTest",
	"testTest", "programFilesTest", "inputTest", "inputFilesTest",
	"assertTest", "assertions", "assertion", "trueIn", "trueInAll",
	"trueInAtLeast", "trueInAtMost", "trueInExactly", "constraintIn",
	"constraintEqual", "constraintForAll", "constraintInAtLeast",
	"constraintInAtMost", "constraintInExactly", "bestModelCost",
	"head", "body", "disjunction", "choice", "choice_elements",
	"choice_element", "aggregate", "aggregate_elements",
	"aggregate_element", "aggregate_function", "optimize",
	"optimize_elements", "optimize_element", "optimize_function",
	"weight_at_level", "naf_literals", "naf_literal", "classical_literal",
	"builtin_atom", "binop", "terms", "term", "arithop"];

function ASPCore2_0cParser(input) {
	antlr4.Parser.call(this, input);
	this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
	this.ruleNames = ruleNames;
	this.literalNames = literalNames;
	this.symbolicNames = symbolicNames;
	return this;
}

ASPCore2_0cParser.prototype = Object.create(antlr4.Parser.prototype);
ASPCore2_0cParser.prototype.constructor = ASPCore2_0cParser;

Object.defineProperty(ASPCore2_0cParser.prototype, "atn", {
	get: function () {
		return atn;
	}
});

ASPCore2_0cParser.EOF = antlr4.Token.EOF;
ASPCore2_0cParser.T__0 = 1;
ASPCore2_0cParser.T__1 = 2;
ASPCore2_0cParser.T__2 = 3;
ASPCore2_0cParser.T__3 = 4;
ASPCore2_0cParser.T__4 = 5;
ASPCore2_0cParser.T__5 = 6;
ASPCore2_0cParser.T__6 = 7;
ASPCore2_0cParser.T__7 = 8;
ASPCore2_0cParser.T__8 = 9;
ASPCore2_0cParser.T__9 = 10;
ASPCore2_0cParser.T__10 = 11;
ASPCore2_0cParser.T__11 = 12;
ASPCore2_0cParser.T__12 = 13;
ASPCore2_0cParser.T__13 = 14;
ASPCore2_0cParser.T__14 = 15;
ASPCore2_0cParser.T__15 = 16;
ASPCore2_0cParser.T__16 = 17;
ASPCore2_0cParser.T__17 = 18;
ASPCore2_0cParser.T__18 = 19;
ASPCore2_0cParser.T__19 = 20;
ASPCore2_0cParser.T__20 = 21;
ASPCore2_0cParser.T__21 = 22;
ASPCore2_0cParser.T__22 = 23;
ASPCore2_0cParser.T__23 = 24;
ASPCore2_0cParser.T__24 = 25;
ASPCore2_0cParser.T__25 = 26;
ASPCore2_0cParser.T__26 = 27;
ASPCore2_0cParser.SINGLE_QUOTE = 28;
ASPCore2_0cParser.NAF = 29;
ASPCore2_0cParser.DIRECTIVE_START = 30;
ASPCore2_0cParser.DIRECTIVE_END = 31;
ASPCore2_0cParser.ID = 32;
ASPCore2_0cParser.VARIABLE = 33;
ASPCore2_0cParser.STRING = 34;
ASPCore2_0cParser.NUMBER = 35;
ASPCore2_0cParser.ANONYMOUS_VARIABLE = 36;
ASPCore2_0cParser.DOT = 37;
ASPCore2_0cParser.COMMA = 38;
ASPCore2_0cParser.QUERY_MARK = 39;
ASPCore2_0cParser.COLON = 40;
ASPCore2_0cParser.SEMICOLON = 41;
ASPCore2_0cParser.OR = 42;
ASPCore2_0cParser.CONS = 43;
ASPCore2_0cParser.WCONS = 44;
ASPCore2_0cParser.PLUS = 45;
ASPCore2_0cParser.MINUS = 46;
ASPCore2_0cParser.TIMES = 47;
ASPCore2_0cParser.DIV = 48;
ASPCore2_0cParser.AT = 49;
ASPCore2_0cParser.PAREN_OPEN = 50;
ASPCore2_0cParser.PAREN_CLOSE = 51;
ASPCore2_0cParser.SQUARE_OPEN = 52;
ASPCore2_0cParser.SQUARE_CLOSE = 53;
ASPCore2_0cParser.CURLY_OPEN = 54;
ASPCore2_0cParser.CURLY_CLOSE = 55;
ASPCore2_0cParser.EQUAL = 56;
ASPCore2_0cParser.UNEQUAL = 57;
ASPCore2_0cParser.LESS = 58;
ASPCore2_0cParser.GREATER = 59;
ASPCore2_0cParser.LESS_OR_EQ = 60;
ASPCore2_0cParser.GREATER_OR_EQ = 61;
ASPCore2_0cParser.AGGREGATE_COUNT = 62;
ASPCore2_0cParser.AGGREGATE_MAX = 63;
ASPCore2_0cParser.AGGREGATE_MIN = 64;
ASPCore2_0cParser.AGGREGATE_SUM = 65;
ASPCore2_0cParser.MINIMIZE = 66;
ASPCore2_0cParser.MAXIMIZE = 67;
ASPCore2_0cParser.HASH = 68;
ASPCore2_0cParser.BLANK = 69;
ASPCore2_0cParser.MULTI_LINE_COMMENT = 70;
ASPCore2_0cParser.LINE_COMMENT = 71;

ASPCore2_0cParser.RULE_inizio = 0;
ASPCore2_0cParser.RULE_program = 1;
ASPCore2_0cParser.RULE_statements = 2;
ASPCore2_0cParser.RULE_query = 3;
ASPCore2_0cParser.RULE_statement = 4;
ASPCore2_0cParser.RULE_statementsForTest = 5;
ASPCore2_0cParser.RULE_entireBlockTest = 6;
ASPCore2_0cParser.RULE_nameEqual = 7;
ASPCore2_0cParser.RULE_listOfString = 8;
ASPCore2_0cParser.RULE_startBlock = 9;
ASPCore2_0cParser.RULE_endBlock = 10;
ASPCore2_0cParser.RULE_statementForTest = 11;
ASPCore2_0cParser.RULE_testDirective = 12;
ASPCore2_0cParser.RULE_inLineAnnotation = 13;
ASPCore2_0cParser.RULE_ruleTest = 14;
ASPCore2_0cParser.RULE_blockTest = 15;
ASPCore2_0cParser.RULE_testTest = 16;
ASPCore2_0cParser.RULE_programFilesTest = 17;
ASPCore2_0cParser.RULE_inputTest = 18;
ASPCore2_0cParser.RULE_inputFilesTest = 19;
ASPCore2_0cParser.RULE_assertTest = 20;
ASPCore2_0cParser.RULE_assertions = 21;
ASPCore2_0cParser.RULE_assertion = 22;
ASPCore2_0cParser.RULE_trueIn = 23;
ASPCore2_0cParser.RULE_trueInAll = 24;
ASPCore2_0cParser.RULE_trueInAtLeast = 25;
ASPCore2_0cParser.RULE_trueInAtMost = 26;
ASPCore2_0cParser.RULE_trueInExactly = 27;
ASPCore2_0cParser.RULE_constraintIn = 28;
ASPCore2_0cParser.RULE_constraintEqual = 29;
ASPCore2_0cParser.RULE_constraintForAll = 30;
ASPCore2_0cParser.RULE_constraintInAtLeast = 31;
ASPCore2_0cParser.RULE_constraintInAtMost = 32;
ASPCore2_0cParser.RULE_constraintInExactly = 33;
ASPCore2_0cParser.RULE_bestModelCost = 34;
ASPCore2_0cParser.RULE_head = 35;
ASPCore2_0cParser.RULE_body = 36;
ASPCore2_0cParser.RULE_disjunction = 37;
ASPCore2_0cParser.RULE_choice = 38;
ASPCore2_0cParser.RULE_choice_elements = 39;
ASPCore2_0cParser.RULE_choice_element = 40;
ASPCore2_0cParser.RULE_aggregate = 41;
ASPCore2_0cParser.RULE_aggregate_elements = 42;
ASPCore2_0cParser.RULE_aggregate_element = 43;
ASPCore2_0cParser.RULE_aggregate_function = 44;
ASPCore2_0cParser.RULE_optimize = 45;
ASPCore2_0cParser.RULE_optimize_elements = 46;
ASPCore2_0cParser.RULE_optimize_element = 47;
ASPCore2_0cParser.RULE_optimize_function = 48;
ASPCore2_0cParser.RULE_weight_at_level = 49;
ASPCore2_0cParser.RULE_naf_literals = 50;
ASPCore2_0cParser.RULE_naf_literal = 51;
ASPCore2_0cParser.RULE_classical_literal = 52;
ASPCore2_0cParser.RULE_builtin_atom = 53;
ASPCore2_0cParser.RULE_binop = 54;
ASPCore2_0cParser.RULE_terms = 55;
ASPCore2_0cParser.RULE_term = 56;
ASPCore2_0cParser.RULE_arithop = 57;


function InizioContext(parser, parent, invokingState) {
	if (parent === undefined) {
		parent = null;
	}
	if (invokingState === undefined || invokingState === null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
	this.parser = parser;
	this.ruleIndex = ASPCore2_0cParser.RULE_inizio;
	return this;
}

InizioContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
InizioContext.prototype.constructor = InizioContext;

InizioContext.prototype.program = function () {
	return this.getTypedRuleContext(ProgramContext, 0);
};

InizioContext.prototype.enterRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.enterInizio(this);
	}
};

InizioContext.prototype.exitRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.exitInizio(this);
	}
};


ASPCore2_0cParser.InizioContext = InizioContext;

ASPCore2_0cParser.prototype.inizio = function () {

	var localctx = new InizioContext(this, this._ctx, this.state);
	this.enterRule(localctx, 0, ASPCore2_0cParser.RULE_inizio);
	try {
		this.state = 118;
		this._errHandler.sync(this);
		switch (this._input.LA(1)) {
			case ASPCore2_0cParser.DIRECTIVE_START:
			case ASPCore2_0cParser.ID:
			case ASPCore2_0cParser.VARIABLE:
			case ASPCore2_0cParser.STRING:
			case ASPCore2_0cParser.NUMBER:
			case ASPCore2_0cParser.ANONYMOUS_VARIABLE:
			case ASPCore2_0cParser.CONS:
			case ASPCore2_0cParser.WCONS:
			case ASPCore2_0cParser.MINUS:
			case ASPCore2_0cParser.PAREN_OPEN:
			case ASPCore2_0cParser.CURLY_OPEN:
			case ASPCore2_0cParser.MINIMIZE:
			case ASPCore2_0cParser.MAXIMIZE:
				this.enterOuterAlt(localctx, 1);
				this.state = 116;
				this.program();
				break;
			case ASPCore2_0cParser.EOF:
				this.enterOuterAlt(localctx, 2);

				break;
			default:
				throw new antlr4.error.NoViableAltException(this);
		}
	} catch (re) {
		if (re instanceof antlr4.error.RecognitionException) {
			localctx.exception = re;
			this._errHandler.reportError(this, re);
			this._errHandler.recover(this, re);
		} else {
			throw re;
		}
	} finally {
		this.exitRule();
	}
	return localctx;
};


function ProgramContext(parser, parent, invokingState) {
	if (parent === undefined) {
		parent = null;
	}
	if (invokingState === undefined || invokingState === null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
	this.parser = parser;
	this.ruleIndex = ASPCore2_0cParser.RULE_program;
	return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statements = function () {
	return this.getTypedRuleContext(StatementsContext, 0);
};

ProgramContext.prototype.query = function () {
	return this.getTypedRuleContext(QueryContext, 0);
};

ProgramContext.prototype.enterRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.exitProgram(this);
	}
};


ASPCore2_0cParser.ProgramContext = ProgramContext;

ASPCore2_0cParser.prototype.program = function () {

	var localctx = new ProgramContext(this, this._ctx, this.state);
	this.enterRule(localctx, 2, ASPCore2_0cParser.RULE_program);
	try {
		this.state = 125;
		this._errHandler.sync(this);
		var la_ = this._interp.adaptivePredict(this._input, 1, this._ctx);
		switch (la_) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				this.state = 120;
				this.statements();
				break;

			case 2:
				this.enterOuterAlt(localctx, 2);
				this.state = 121;
				this.query();
				break;

			case 3:
				this.enterOuterAlt(localctx, 3);
				this.state = 122;
				this.statements();
				this.state = 123;
				this.query();
				break;

		}
	} catch (re) {
		if (re instanceof antlr4.error.RecognitionException) {
			localctx.exception = re;
			this._errHandler.reportError(this, re);
			this._errHandler.recover(this, re);
		} else {
			throw re;
		}
	} finally {
		this.exitRule();
	}
	return localctx;
};


function StatementsContext(parser, parent, invokingState) {
	if (parent === undefined) {
		parent = null;
	}
	if (invokingState === undefined || invokingState === null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
	this.parser = parser;
	this.ruleIndex = ASPCore2_0cParser.RULE_statements;
	return this;
}

StatementsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementsContext.prototype.constructor = StatementsContext;

StatementsContext.prototype.statement = function () {
	return this.getTypedRuleContext(StatementContext, 0);
};

StatementsContext.prototype.statements = function () {
	return this.getTypedRuleContext(StatementsContext, 0);
};

StatementsContext.prototype.enterRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.enterStatements(this);
	}
};

StatementsContext.prototype.exitRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.exitStatements(this);
	}
};


ASPCore2_0cParser.StatementsContext = StatementsContext;

ASPCore2_0cParser.prototype.statements = function () {

	var localctx = new StatementsContext(this, this._ctx, this.state);
	this.enterRule(localctx, 4, ASPCore2_0cParser.RULE_statements);
	try {
		this.enterOuterAlt(localctx, 1);
		this.state = 127;
		this.statement();
		this.state = 129;
		this._errHandler.sync(this);
		var la_ = this._interp.adaptivePredict(this._input, 2, this._ctx);
		if (la_ === 1) {
			this.state = 128;
			this.statements();

		}
	} catch (re) {
		if (re instanceof antlr4.error.RecognitionException) {
			localctx.exception = re;
			this._errHandler.reportError(this, re);
			this._errHandler.recover(this, re);
		} else {
			throw re;
		}
	} finally {
		this.exitRule();
	}
	return localctx;
};


function QueryContext(parser, parent, invokingState) {
	if (parent === undefined) {
		parent = null;
	}
	if (invokingState === undefined || invokingState === null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
	this.parser = parser;
	this.ruleIndex = ASPCore2_0cParser.RULE_query;
	return this;
}

QueryContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
QueryContext.prototype.constructor = QueryContext;

QueryContext.prototype.classical_literal = function () {
	return this.getTypedRuleContext(Classical_literalContext, 0);
};

QueryContext.prototype.QUERY_MARK = function () {
	return this.getToken(ASPCore2_0cParser.QUERY_MARK, 0);
};

QueryContext.prototype.enterRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.enterQuery(this);
	}
};

QueryContext.prototype.exitRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.exitQuery(this);
	}
};


ASPCore2_0cParser.QueryContext = QueryContext;

ASPCore2_0cParser.prototype.query = function () {

	var localctx = new QueryContext(this, this._ctx, this.state);
	this.enterRule(localctx, 6, ASPCore2_0cParser.RULE_query);
	try {
		this.enterOuterAlt(localctx, 1);
		this.state = 131;
		this.classical_literal();
		this.state = 132;
		this.match(ASPCore2_0cParser.QUERY_MARK);
	} catch (re) {
		if (re instanceof antlr4.error.RecognitionException) {
			localctx.exception = re;
			this._errHandler.reportError(this, re);
			this._errHandler.recover(this, re);
		} else {
			throw re;
		}
	} finally {
		this.exitRule();
	}
	return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if (parent === undefined) {
		parent = null;
	}
	if (invokingState === undefined || invokingState === null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
	this.parser = parser;
	this.ruleIndex = ASPCore2_0cParser.RULE_statement;
	return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.CONS = function () {
	return this.getToken(ASPCore2_0cParser.CONS, 0);
};

StatementContext.prototype.DOT = function () {
	return this.getToken(ASPCore2_0cParser.DOT, 0);
};

StatementContext.prototype.body = function () {
	return this.getTypedRuleContext(BodyContext, 0);
};

StatementContext.prototype.head = function () {
	return this.getTypedRuleContext(HeadContext, 0);
};

StatementContext.prototype.WCONS = function () {
	return this.getToken(ASPCore2_0cParser.WCONS, 0);
};

StatementContext.prototype.SQUARE_OPEN = function () {
	return this.getToken(ASPCore2_0cParser.SQUARE_OPEN, 0);
};

StatementContext.prototype.weight_at_level = function () {
	return this.getTypedRuleContext(Weight_at_levelContext, 0);
};

StatementContext.prototype.SQUARE_CLOSE = function () {
	return this.getToken(ASPCore2_0cParser.SQUARE_CLOSE, 0);
};

StatementContext.prototype.optimize = function () {
	return this.getTypedRuleContext(OptimizeContext, 0);
};

StatementContext.prototype.testDirective = function () {
	return this.getTypedRuleContext(TestDirectiveContext, 0);
};

StatementContext.prototype.enterRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function (listener) {
	if (listener instanceof ASPCore2_0cListener) {
		listener.exitStatement(this);
	}
};


ASPCore2_0cParser.StatementContext = StatementContext;

ASPCore2_0cParser.prototype.statement = function () {

	var localctx = new StatementContext(this, this._ctx, this.state);
	this.enterRule(localctx, 8, ASPCore2_0cParser.RULE_statement);
	var _la = 0; // Token type
	try {
		this.state = 171;
		this._errHandler.sync(this);
		var la_ = this._interp.adaptivePredict(this._input, 8, this._ctx);
		switch (la_) {
			case 1:
				this.enterOuterAlt(localctx, 1);
				this.state = 134;
				this.match(ASPCore2_0cParser.CONS);
				this.state = 136;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (ASPCore2_0cParser.NAF - 29)) | (1 << (ASPCore2_0cParser.ID - 29)) | (1 << (ASPCore2_0cParser.VARIABLE - 29)) | (1 << (ASPCore2_0cParser.STRING - 29)) | (1 << (ASPCore2_0cParser.NUMBER - 29)) | (1 << (ASPCore2_0cParser.ANONYMOUS_VARIABLE - 29)) | (1 << (ASPCore2_0cParser.MINUS - 29)) | (1 << (ASPCore2_0cParser.PAREN_OPEN - 29)))) !== 0) || ((((_la - 62)) & ~0x1f) == 0 && ((1 << (_la - 62)) & ((1 << (ASPCore2_0cParser.AGGREGATE_COUNT - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MAX - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MIN - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_SUM - 62)))) !== 0)) {
					this.state = 135;
					this.body();
				}

				this.state = 138;
				this.match(ASPCore2_0cParser.DOT);
				break;

			case 2:
				this.enterOuterAlt(localctx, 2);
				this.state = 139;
				this.head();
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === ASPCore2_0cParser.CONS) {
					this.state = 140;
					this.match(ASPCore2_0cParser.CONS);
					this.state = 142;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
					if (((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (ASPCore2_0cParser.NAF - 29)) | (1 << (ASPCore2_0cParser.ID - 29)) | (1 << (ASPCore2_0cParser.VARIABLE - 29)) | (1 << (ASPCore2_0cParser.STRING - 29)) | (1 << (ASPCore2_0cParser.NUMBER - 29)) | (1 << (ASPCore2_0cParser.ANONYMOUS_VARIABLE - 29)) | (1 << (ASPCore2_0cParser.MINUS - 29)) | (1 << (ASPCore2_0cParser.PAREN_OPEN - 29)))) !== 0) || ((((_la - 62)) & ~0x1f) == 0 && ((1 << (_la - 62)) & ((1 << (ASPCore2_0cParser.AGGREGATE_COUNT - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MAX - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MIN - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_SUM - 62)))) !== 0)) {
						this.state = 141;
						this.body();
					}

				}

				this.state = 146;
				this.match(ASPCore2_0cParser.DOT);
				break;

			case 3:
				this.enterOuterAlt(localctx, 3);
				this.state = 148;
				this.match(ASPCore2_0cParser.WCONS);
				this.state = 150;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (((((_la - 29)) & ~0x1f) == 0 && ((1 << (_la - 29)) & ((1 << (ASPCore2_0cParser.NAF - 29)) | (1 << (ASPCore2_0cParser.ID - 29)) | (1 << (ASPCore2_0cParser.VARIABLE - 29)) | (1 << (ASPCore2_0cParser.STRING - 29)) | (1 << (ASPCore2_0cParser.NUMBER - 29)) | (1 << (ASPCore2_0cParser.ANONYMOUS_VARIABLE - 29)) | (1 << (ASPCore2_0cParser.MINUS - 29)) | (1 << (ASPCore2_0cParser.PAREN_OPEN - 29)))) !== 0) || ((((_la - 62)) & ~0x1f) == 0 && ((1 << (_la - 62)) & ((1 << (ASPCore2_0cParser.AGGREGATE_COUNT - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MAX - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_MIN - 62)) | (1 << (ASPCore2_0cParser.AGGREGATE_SUM - 62)))) !== 0)) {
					this.state = 149;
					this.body();
				}

				this.state = 152;
				this.match(ASPCore2_0cParser.DOT);
				this.state = 153;
				this.match(ASPCore2_0cParser.SQUARE_OPEN);
				this.state = 154;
				this.weight_at_level();
				this.state = 155;
				this.match(ASPCore2_0cParser.SQUARE_CLOSE);
				break;
